--- a/content/reading/05-reading.Rmd
+++ b/content/reading/05-reading.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Version control and reproducible research"
-date: "2020-06-02"
+title: "Data cleaning and wrangling"
+date: "2020-09-16"
 citeproc: false
 bibliography: ../../static/bib/references.bib
 csl: ../../static/bib/chicago-fullnote-bibliography-no-bib.csl
@@ -13,19 +13,14 @@ You are expected to have read this when you show up for the session.
 - The [Introduction to data.table](https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html)
   vignette included in the [data.table R package](https://cran.r-project.com/package=data.table)
 
-- Roger Peng's Mastering Software Development Book Section 3.9 Version control
-  and Github
-  [(link)](https://bookdown.org/rdpeng/RProgDA/version-control-and-github.html)
-
-You are also expected to have git installed in your system and having a
-GitHub account. For this see
-[here](https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration)
-and [here](http://github.com/).
+- ["Chapter 5: Data Transformation"](https://r4ds.had.co.nz/transform.html) of the
+book [R for Data Science](https://r4ds.had.co.nz/)
 
 # Optional reading
 
-- Chapter one of the [Pro git book](https://git-scm.com/book/en/v2) will give you
-  a more technical overview of what's git and what happens under-the-hood.
+- We recommend you going through the instructions to download Python
+  [here](https://wiki.python.org/moin/BeginnersGuide/Download) and installing
+  jupyter [here](https://jupyter.org/install).
 
 
 
